--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,10 +1,10 @@
 <div>
-  <img src="/assets/profile-pic.webp" alt="Headshot of Maxi Ferreira">
+  <img src="https://avatars.githubusercontent.com/u/28906234?v=4" alt="Headshot of Adam Worley">
   <p>
-    Hi, I'm <strong>Maxi</strong>. I'm a software engineer and data scientist based in Los Angeles.
-    You can follow me on <a href="https://www.twitter.com/Charca" target="_blank">Twitter</a>,
-    see some of my work on <a href="https://www.github.com/Charca" target="_blank">GitHub</a>,
-    or read more about me on <a href="https://www.maxiferreira.com" target="_blank">my website</a>.
+    Hi, I'm <strong>Adam</strong>. I'm a software developer based in the South of England.
+    <!-- You can follow me on <a href="https://www.twitter.com/Charca" target="_blank">Twitter</a>, -->
+    See some of my work on <a href="https://www.github.com/AdamWorley" target="_blank">GitHub</a>,
+    or check out <a href="https://portfolio.adamworley.com" target="_blank">my portfolio</a>.
   </p>
 </div>
 
