--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -1,4 +1,4 @@
-<div>
+<div transition:name="bio">
   <img src="https://avatars.githubusercontent.com/u/28906234?v=4" alt="Headshot of Adam Worley">
   <p>
     Hi, I'm <strong>Adam</strong>. I'm a software developer based in the South of England.
